feat: add REST API circuit editing service, core simulation engine, and React frontend editor